apps/base/dbgate/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dbgate
  labels:
    goldilocks.fairwinds.com/enabled: "true"
