apps/base/dbgate/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dbgate
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dbgate
  template:
    metadata:
      labels:
        app: dbgate
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      containers:
        - name: dbgate
          image: dbgate/dbgate:latest
          ports:
            - containerPort: 3000
              name: http
          resources:
            requests:
              memory: "112Mi"
              cpu: "15m"
            limits:
              memory: "256Mi"
              cpu: "100m"
          volumeMounts:
            - mountPath: /dbgate/data
              name: data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: dbgate-data-pvc
